# BaariSovellus

./: README.md  requirements.txt
Sovellus/: .env  app.py  db.py  dbDump  index.html  newuser.html  pyproject.toml  queries.py  requirements.txt  routes.py  schema.sql
Sovellus/templates/: bar.html  editbar.html  error.html  index.html  login.html  register.html
