[tool.poetry]
name = "baarisovellus"
version = "0.1.0"
description = ""
authors = ["Rasmus Stenberg <rasmus.stenberg@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
flask-sqlalchemy = "^3.0.2"
sqlalchemy = "^1.4.45"
psycopg2-binary = "^2.9.5"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
